# python_template

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
reports/: index.html  src_python_template___init___py.html  src_python_template_example_py.html  status.json  unit_test_coverage.xml
src/python_template/: example.py
tests/: test_example.py
