[tool.poetry]
name = "template-repo"
version = "0.1.0"
description = "Template repo based on The hypermodern Python project"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>", "Ben Gittins"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cjolowicz/hypermodern-python"
repository = "https://github.com/cjolowicz/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
flake8 = "^3.7.9"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.8.5"

[tool.poetry.scripts]
python-template = "python_template.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_template"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
